Fix loading of relative local resources in popup dialog

Set the baseUrl of QWebView to that of the parent geo document (KML).
Fixes e.g. showing relative images in the popup balloon for placemarks
in a KML/KMZ file.

BUG: 336061
FIXED-IN: 4.13.3
(cherry picked from commit bf287898f84207c9939300f5adfc2124217c532d)

Conflicts:
	src/lib/marble/layers/PopupLayer.cpp